fix: enforce skill access and activate timer skills